fix responsive design and fix bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -185,3 +185,7 @@
 .fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
   @apply m-0;
 }
+
+.fc .fc-col-header-cell-cushion {
+  @apply text-xs text-center md:text-base;
+}
